<resources>
    <string name="app_name">ExpTrip</string>
    <string name="welcome_name">ExpTrip</string>
    <string name="login_page">Sign in</string>
    <string name="plan">Plan</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an Account</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="register_page">Create an Account</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string name="enter_your_last_name">Enter your Last Name</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="register_account">Register</string>
    <string name="planner_page">Plans</string>
    <string name="create_a_plan">Create a Plan</string>
    <string name="your_plans">Your Plans</string>
    <string name="create_plans">Create your Plan</string>
    <string name="enter_your_country">Enter your Country</string>
    <string name="enter_your_plan_name">Enter your Plan Name</string>
    <string name="find_a_location">Explore Locations</string>
    <string name="when_do_you_want_go">When do you want go?</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create">Create</string>
    <string name="when_do_you_want_to_go">When do you want to go?</string>
    <string name="title_activity_map_page">Map</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="plan_budget">Plan Budget</string>
    <string name="description">Description</string>
    <string name="description_here">Description here</string>
    <string name="retype_your_password">Confirm Password</string>
    <string name="title_activity_profile_page">Profile</string>
    <string name="title_activity_menu_">Menu_Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
