<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fervi.exptrip.CreatePlanPage">

    <EditText
        android:id="@+id/txtPlanName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_plan_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtWhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/where_do_you_want_to_go"
        android:inputType="textPersonName"
        app:layout_constraintRight_toLeftOf="@+id/txtMap"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtMap"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="28dp" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="273dp"
        android:layout_height="244dp"
        android:textSize="12sp"
        android:headerBackground="@android:color/holo_blue_dark"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnCreate"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/txtWhen"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtWhen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when_do_you_want_go"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="-17dp"
        app:layout_constraintTop_toBottomOf="@+id/txtMap"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.416" />

    <ImageButton
        android:id="@+id/imgMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_mylocation"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtMap"
        android:layout_marginStart="19dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtMap"
        android:layout_marginLeft="26dp"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_marginBottom="18dp" />

    <TextView
        android:id="@+id/txtMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_a_location"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="144dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="113dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="113dp"
        app:layout_constraintRight_toRightOf="@+id/txtMap"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/datePicker"
        android:layout_marginLeft="113dp"
        android:layout_marginRight="113dp"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
